--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -1,10 +1,6 @@
-  {{ define "header" }}
-  <div class="row">
-    <div class="col-xs-12 col-sm-12">
-        <h1>{{ .Title }}</h1>
-    </div>
-  </div>
-  {{ end }}
+{{ define "header" }}
+  {{ partial "page-title.html" . }}
+{{ end }}
 
   {{ define "main" }}
   <div class="row">
