Added a basic layout for the privacy and impressum page

--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -24,6 +24,11 @@ h2, h3 {
     font-size: $font-size-h2;
 }
 
+h4 {
+    font-size: $font-size-text;
+    font-family: $font-family-medium;
+}
+
 p, a {
     font-size: $font-size-text;
 }
