--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -10,7 +10,10 @@
       <img src="{{ . | absURL }}" alt="post-image" title="post-image">
     </div>
     {{ end }}
-    <div class="page-content">
+
+    {{ $current := . }}
+    {{ $current = (eq .Title "Instagram") }}
+    <div class="{{ if $current }}instagram-content{{ else }}page-content{{ end }}">
       {{ .Content }}
       {{ with .Params.privacyOptOut -}}
         <a id="privacyOptOut" href="javascript:gaOptout()">{{ . }}</a>
