--- a/themes/customized/assets/sass/header.scss
+++ b/themes/customized/assets/sass/header.scss
@@ -10,6 +10,26 @@ header {
   padding-top: $spacing-s;
   padding-bottom: $spacing-s;
 
+  .dropdown.show {
+    &:hover .nav-link {
+      color: $color-grey-100;
+    }
+
+    .dropdown-menu {
+      border: none;
+      padding: 0;
+      margin-top: 0;
+
+      li {
+        padding-left: $spacing-m;
+
+        &:hover .nav-link {
+          color: $color-grey-60;
+        }
+      }
+    }
+  }
+
   .navbar-collapse {
     margin-top: $spacing-m;
   }
