--- a/themes/customized/layouts/partials/comments.html
+++ b/themes/customized/layouts/partials/comments.html
@@ -5,7 +5,7 @@
 <div class="comment-underline"></div>
 </div>
 <div class="btn btn-secondary disqus-button" id="load_disqus" onclick="load_disqus()">
-  {{ i18n "load_disqus" }}
+  Load Disqus Comments
 </div>
 <div id="disqus_thread"></div>
 <script>
