--- a/themes/customized/assets/sass/sidebar.scss
+++ b/themes/customized/assets/sass/sidebar.scss
@@ -2,14 +2,23 @@
 
 main {
   .sidebar-widget {
+    margin-bottom: $spacing-xl;
+
     .tagcloud {
-      display: block;
       margin-bottom: $spacing-s;
 
       a {
         margin: 0 $spacing-s $spacing-s 0;
         display: inline-block;
         float: left;
+      }
+
+      &.categories {
+        display: grid;
+      }
+
+      &.tags {
+        display: block;
       }
     }
   }
