--- a/themes/customized/layouts/partials/sidebar.html
+++ b/themes/customized/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
 
 <div class="sidebar-widget">
   <h5 class="widget-title">{{ i18n "tags" }}</h5>
-  <div class="tagcloud tags">
+  <div class="tagcloud tags clearfix">
     {{ range .Site.Taxonomies.tags }}
     <a class="ghost-button" href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
     {{ end }}
