Moved the blog from posts to blog

--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -3,7 +3,7 @@
     <div class="row">
       {{- $pages := .Pages -}}
       {{- if .IsHome -}}
-        {{- $pages = where .Site.RegularPages "Type" "posts" -}}
+        {{- $pages = where .Site.RegularPages "Type" "blog" -}}
       {{- end -}}
       {{- $paginator := .Paginate $pages -}}
       
