--- a/themes/customized/layouts/partials/header.html
+++ b/themes/customized/layouts/partials/header.html
@@ -17,7 +17,7 @@
           {{ range $index, $menuItem := .Site.Menus.main }}
           {{ $active := or ($current.IsMenuCurrent "main" .) ($current.HasMenuCurrent "main" .) }}
           {{ $active = or $active (eq .Name $current.Title) }}
-          {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "posts")) }}
+          {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "blog")) }}
           {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "categories")) }}
           {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "tags")) }}
           {{ $active = or $active (and (eq .Name "About") (eq $current.Section "about")) }}
