Added the related posts to the blog post sidebar

--- a/themes/customized/assets/sass/sidebar.scss
+++ b/themes/customized/assets/sass/sidebar.scss
@@ -21,5 +21,10 @@ main {
         display: block;
       }
     }
+
+    .related-post {
+      margin-bottom: $spacing-xl;
+      text-align: center;
+    }
   }
 }
