--- a/themes/customized/assets/sass/blog.scss
+++ b/themes/customized/assets/sass/blog.scss
@@ -105,6 +105,33 @@ main {
     margin-bottom: $spacing-m;
     width: 100%;
   }
+
+  .sidebar-widget {
+    margin-bottom: $spacing-xl;
+
+    .tagcloud {
+      margin-bottom: $spacing-s;
+
+      a {
+        margin: 0 $spacing-s $spacing-s 0;
+        display: inline-block;
+        float: left;
+      }
+
+      &.categories {
+        display: grid;
+      }
+
+      &.tags {
+        display: block;
+      }
+    }
+
+    .related-post {
+      margin-bottom: $spacing-xl;
+      text-align: center;
+    }
+  }
 }
 
 @media(min-width: 992px) {
