--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -24,22 +24,6 @@
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-3">
-    <div class="sidebar-widget">
-      <h2 class="widget-title">{{ i18n "categories" }}</h2>
-      <div class="tagcloud categories">
-        {{ range .Site.Taxonomies.categories }}
-          <a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
-        {{ end }}
-      </div>
-    </div>
-    
-    <div class="sidebar-widget">
-      <h5 class="widget-title">{{ i18n "tags" }}</h5>
-      <div class="tagcloud tags clearfix">
-        {{ range .Site.Taxonomies.tags }}
-        <a class="ghost-button" href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
-        {{ end }}
-      </div>
-    </div>    
+    {{ partial "blog-sidebar.html" . }}
   </div>
 </div>
