Fixed the about pepper layout

--- a/themes/customized/layouts/about/single.html
+++ b/themes/customized/layouts/about/single.html
@@ -14,5 +14,41 @@
       {{ .Content }}
     </div>
   </div>
+
+  {{ $data := index .Site.Data .Site.Language.Lang }}
+
+  {{ if $data.about.pepper.enable }}
+  {{ with $data.about.pepper }}
+
+    {{ range $i,$p := $data.about.pepper.item }}
+    {{ if not (modBool $i 2) }}
+      <div class="col-xs-12 col-sm-6">
+        <div class="page-content">
+          <h2>{{ .title | markdownify }}</h2>
+          {{ .content | markdownify }}
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="post-thumb">
+          <img src="{{ .image | absURL }}" alt="post-image" title="post-image">
+        </div>
+      </div>
+    {{ else }}
+      <div class="col-xs-12 col-sm-6">
+        <div class="post-thumb">
+          <img src="{{ .image | absURL }}" alt="post-image" title="post-image">
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="page-content">
+          <h2>{{ .title | markdownify }}</h2>
+          {{ .content | markdownify }}
+        </div>
+      </div>
+    {{ end }}
+    
+    {{ end }}
+    {{ end }}
+  {{ end }}
 </div>
 {{ end }}
