--- a/themes/customized/layouts/about/list.html
+++ b/themes/customized/layouts/about/list.html
@@ -3,52 +3,34 @@
 {{ end }}
 
 {{ define "main" }}
-<div class="row">
-  <div class="col-xs-12 col-sm-12">
-    {{ with .Params.featured_image -}}
-    <div class="post-thumb">
-      <img src="{{ . | absURL }}" alt="post-image" title="post-image">
-    </div>
-    {{ end }}
-    <div class="page-content">
-      {{ .Content }}
-    </div>
-  </div>
-
+<div class="row about-page">
   {{ $data := index .Site.Data .Site.Language.Lang }}
 
-  {{ if $data.about.pepper.enable }}
-  {{ with $data.about.pepper }}
+  {{ if $data.about.us.enable }}
+  {{ with $data.about.us }}
 
-    {{ range $i,$p := $data.about.pepper.item }}
-    {{ if not (modBool $i 2) }}
-      <div class="col-xs-12 col-sm-6">
-        <div class="page-content">
-          <h2>{{ .title | markdownify }}</h2>
-          {{ .content | markdownify }}
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
+    {{ range $i,$p := $data.about.us.item }}
+      <div class="col-xs-12 col-sm-12 col-md-6 {{ if not (modBool $i 2) }}showMobile{{ end }}">
         <div class="post-thumb">
           <img src="{{ .image | absURL }}" alt="post-image" title="post-image">
         </div>
       </div>
-    {{ else }}
-      <div class="col-xs-12 col-sm-6">
-        <div class="post-thumb">
-          <img src="{{ .image | absURL }}" alt="post-image" title="post-image">
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div class="page-content">
+      <div class="col-xs-12 col-sm-12 col-md-6">
+        <div class="about-content">
           <h2>{{ .title | markdownify }}</h2>
+          {{ partial "customLine.html" . }}
           {{ .content | markdownify }}
         </div>
       </div>
+      {{ if not (modBool $i 2) }}
+        <div class="col-md-6 {{ if not (modBool $i 2) }}showDesktop{{ end }}">
+          <div class="post-thumb">
+            <img src="{{ .image | absURL }}" alt="post-image" title="post-image">
+          </div>
+        </div>
+      {{ end }}
     {{ end }}
-    
-    {{ end }}
-    {{ end }}
+  {{ end }}
   {{ end }}
 </div>
 {{ end }}
