Updated the cookie consent style

--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -3,11 +3,12 @@
     window.cookieconsent.initialise({
         "palette": {
             "popup": {
-            "background": "#544a4a",
-            "text": "#e4e2e2"
+                "background": "#E8E8E9",
+                "text": "#191D1F"
             },
             "button": {
-            "background": "#11abb0"
+                "background": "#EDDCAC",
+                "text": "#191D1F"
             }
         },
         "theme": "classic",
