Fixed the cookie consent privacy link

--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -17,7 +17,7 @@
             "deny": '{{ i18n "cookie_dismiss" }}',
             "allow": '{{ i18n "cookie_allow" }}',
             "link": '{{ i18n "cookie_link" }}',
-            "href": '{{ "privacy" | safeURL }}'
+            "href": '{{ "privacy" | absLangURL }}'
         },
         onInitialise: initialise,
         onStatusChange: statusChange
