Updated the cookie consent button hover color

--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -8,6 +8,7 @@
             },
             "button": {
                 "background": "#EDDCAC",
+                "hover": "#D4C49B",
                 "text": "#191D1F"
             }
         },
