Added disclaimer for blog posts

--- a/themes/customized/assets/sass/blog.scss
+++ b/themes/customized/assets/sass/blog.scss
@@ -9,6 +9,13 @@ main {
 }
 
 main {
+  .blog-disclaimer {
+    background-color: $color-secondary;
+    padding: $spacing-m;
+    margin-bottom: $spacing-l;
+    text-align: center;
+  }
+
   .post {
     .post-header-title,
     .post-description,
