--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -11,9 +11,31 @@
 @import 'pagination';
 // @import 'comments';
 
+/* sticky footer start */
+html,
+body {
+    height: 100%;
+}
+
 body {
     font-family: $font-family;
     color: $color-grey-90;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper {
+    flex: 1 0 auto;
+}
+
+footer {
+    flex-shrink: 0;
+}
+/* sticky footer end */
+
+body {
+    
 }
 
 h1, h1 a {
@@ -103,8 +125,7 @@ li:hover a, li:active a, a:hover, a:active {
 
 /* header container */
 #header-container {
-    margin-top: $header-height;
-    padding-top: $spacing-xl;
+    padding-top: $header-height + $spacing-xl;
 
     h1 {
         font-size: $font-size-display;
