--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -8,11 +8,18 @@
   {{ end }}
 
   <div class="col-xs-12 col-sm-4 col-md-3">
+    <div class="sidebar-widget">
+      <h2 class="widget-title">{{ i18n "search" }}</h2>
+      <input id="search-input" class="form-control" type="text" placeholder='{{ i18n "search" }}' name="search">
+    </div>
+
     {{ partial "blog-sidebar.html" . }}
   </div>
 
   <div class="col-xs-12 col-sm-8 col-md-9">
     <div class="row">
+      <div id="search-results" class="search"></div>
+
       {{- $pages := .Pages -}}
       {{- if .IsHome -}}
         {{- $pages = where .Site.RegularPages "Type" "blog" -}}
