--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -18,7 +18,7 @@
 
   <div class="col-xs-12 col-sm-8 col-md-9">
     <div class="row">
-      <div id="search-results" class="search"></div>
+      <div id="search-results" class="row search"></div>
 
       {{- $pages := .Pages -}}
       {{- if .IsHome -}}
