--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -1,3 +1,7 @@
+<script>
+  var noSearchResults = '{{ i18n "no_search_results" }}';
+</script>
+
 <div class="row">
   {{ if ne .Site.Language.Lang "en" }}
   <div class="col-xs-12 col-sm-12">
@@ -17,9 +21,8 @@
   </div>
 
   <div class="col-xs-12 col-sm-8 col-md-9">
+    <div id="search-results" class="row search"></div>
     <div class="row">
-      <div id="search-results" class="row search"></div>
-
       {{- $pages := .Pages -}}
       {{- if .IsHome -}}
         {{- $pages = where .Site.RegularPages "Type" "blog" -}}
