Added the search error translation

--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -1,5 +1,6 @@
 <script>
-  var noSearchResults = '{{ i18n "no_search_results" }}';
+  var noSearchResultsTranslation = '{{ i18n "no_search_results" }}';
+  var searchErrorTranslation = '{{ i18n "search_error" }}';
 </script>
 
 <div class="row">
