--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -12,11 +12,11 @@
   </div>
   {{ end }}
 
-  <div class="col-xs-12 col-sm-4 col-md-3">
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
     {{ partial "blog-sidebar.html" . }}
   </div>
 
-  <div class="col-xs-12 col-sm-8 col-md-9">
+  <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
     <div class="row">
       {{- $pages := .Pages -}}
       {{- if .IsHome -}}
