--- a/themes/customized/layouts/blog/single.html
+++ b/themes/customized/layouts/blog/single.html
@@ -8,12 +8,12 @@
 
 {{ define "main" }}
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 showDesktop">
     {{ partial "blog-sidebar.html" . }}
     
     {{ $related := .Site.RegularPages.Related . | first 3 }}
     {{ with $related }}
-    <div class="sidebar-widget showDesktop">
+    <div class="sidebar-widget">
       <h2 class="widget-title">{{ i18n "related_posts" }}</h2>
       {{ range . }}
       <div class="related-post clearfix">
@@ -44,9 +44,11 @@
     </div>
   </div>
 
-  {{ $related := .Site.RegularPages.Related . | first 3 }}
-  {{ with $related }}
-  <div class="col-xs-12 col-sm-12 showMobile">
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 showMobile">
+    {{ partial "blog-sidebar.html" . }}
+    
+    {{ $related2 := .Site.RegularPages.Related . | first 3 }}
+    {{ with $related2 }}
     <div class="sidebar-widget">
       <h2 class="widget-title">{{ i18n "related_posts" }}</h2>
       {{ range . }}
@@ -58,7 +60,7 @@
       </div>
       {{ end }}
     </div>
+    {{ end }}
   </div>
-  {{ end }}
 </div>
 {{ end }}
