--- a/themes/customized/layouts/blog/single.html
+++ b/themes/customized/layouts/blog/single.html
@@ -1,11 +1,3 @@
-{{ define "header" }}
-<div class="row">
-  <div class="col-xs-12 col-sm-12">
-      <h1 class="post-header-title">{{ .Title }}</h1>
-  </div>
-</div>
-{{ end }}
-
 {{ define "main" }}
 <div class="row">
   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 showDesktop">
@@ -29,6 +21,7 @@
 
   <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
     <div class="post">
+      <h1 class="post-single-header-title">{{ .Title }}</h1>
       {{ partial "blogpost-header.html" . }}
        
       {{ with .Params.featured_image -}}
@@ -44,9 +37,7 @@
     </div>
   </div>
 
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 showMobile">
-    {{ partial "blog-sidebar.html" . }}
-    
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 showMobile">    
     {{ $related2 := .Site.RegularPages.Related . | first 3 }}
     {{ with $related2 }}
     <div class="sidebar-widget">
