--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -204,3 +204,10 @@ main {
         }
     }
 }
+
+@media(max-width: 768px) {
+    main .page-content,
+    #header-container {
+        word-break: break-word;
+    }
+}
