Added the info without guarantee

--- a/themes/customized/layouts/blog/single.html
+++ b/themes/customized/layouts/blog/single.html
@@ -33,6 +33,12 @@
       <div class="post-content">
         <p class="lead">{{ .Description }}</p>
         <p>{{ .Content }}</p>
+
+        {{ with .Params.info_without_guarantee -}}
+        <div class="blog-disclaimer">
+          {{ i18n "info_without_guarantee" }}
+        </div>
+        {{ end }}
       </div>
     </div>
   </div>
